# MagnetiCalc

./: .gitignore  FT-87A-J.ini  FT-87A-J_Phase-jumping.ini  LICENSE.md  MagnetiCalc-DefaultProject.ini  MagnetiCalc.ini  README.md  VERSIONING-INFO.md  pre-github-workflow.sh  pydoctor.sh  pyproject.toml  pyrightconfig.json  setup.py
dev/: Pre-GitHub-Workflow.sh  README.md  Test_API.py  Upload-to-PyPI.sh  Upload-to-TestPyPI.sh  pre-github-workflow.sh  upload-to-TestPyPI.sh
docs/: all-documents.html  apidocs-help.html  classIndex.html  fullsearchindex.json  index.html  magneticalc.API.API.html  magneticalc.API.html  magneticalc.About_Dialog.About_Dialog.html  magneticalc.About_Dialog.html  magneticalc.Assert_Dialog.Assert_Dialog.html  magneticalc.Assert_Dialog.html  magneticalc.Backend_CUDA.Backend_CUDA.html  magneticalc.Backend_CUDA.html  magneticalc.Backend_JIT.Backend_JIT.html  magneticalc.Backend_JIT.html  magneticalc.Backend_Types.html  magneticalc.BiotSavart.BiotSavart.html  magneticalc.BiotSavart.html  magneticalc.BiotSavart_CUDA.BiotSavart_CUDA.html  magneticalc.BiotSavart_CUDA.html  magneticalc.BiotSavart_JIT.BiotSavart_JIT.html  magneticalc.BiotSavart_JIT.html  magneticalc.CalculationThread.CalculationThread.html  magneticalc.CalculationThread.html  magneticalc.CheckForUpdates_Dialog.CheckForUpdates_Dialog.html  magneticalc.CheckForUpdates_Dialog.html  magneticalc.Comparison_Types.html  magneticalc.ConditionalDecorator.ConditionalDecorator.html  magneticalc.ConditionalDecorator.html  magneticalc.Config.Config.html  magneticalc.Config.html  (+179 more)
examples/: My Wire.txt  (+5 more)
(+104 files in other folders)
