[project]
name = "magneticalc"
version = "1.16.0"
description = ""
authors = [
    {name = "Paul Wilhelm",email = "shredengineer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "numpy",
    "numba>=0.50.0",
    "scipy",
    "PyQt5",
    "vispy>=0.6.5",
    "qtawesome>=1.0.0,<=1.3.1",
    "sty",
    "si-prefix>=1.2.2",
    "h5py",
]

[project.scripts]
magneticalc = "magneticalc.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.1"
pydoctor = "^25.4.0"
build = "^1.2.2.post1"
coverage = "^7.9.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pyright = "^1.1.402"
vulture = "^2.14"
ruff = "^0.12.1"